# arima-rs

./: Cargo.toml  README.md
crates/arimars/: Cargo.toml
crates/arimars-stationarity/: Cargo.toml
crates/arimars-stationarity/src/tests/: adf.rs  mod.rs
crates/arimars-utils/: Cargo.toml
crates/arimars-utils/src/: arrays.rs
py-arimars/: Cargo.toml
src/: errors.rs  main.rs
src/utils/: check_endog.rs  check_exog.rs  diff.rs  mod.rs
src/utils/sklearn/: check_array.rs  mod.rs
