[workspace]
members = ["crates/*", "py-arimars"]
resolver = "1"

[workspace.package]
version = "0.0.1"
authors = ["Carl Ian Voller"]
edition = "2021"
homepage = "https://github.com/carlvoller/arima-rs"
license = "MIT"
repository = "https://github.com/carlvoller/arima-rs"

[workspace.dependencies]
arimars-utils = { path = "crates/arimars-utils", default-features = false }
